# appletake

./: .gitignore  py.sh  pyproject.toml  setup.sh
app/example/: pendulum_finetuning.py  test.py
app/plane_box/: subenv_test.py  subenv_test_corner.py  subenv_test_paralle.py  subenv_test_three.py  train_corner_ext.py  train_corner_ply.py  train_paralle_ext.py  train_paralle_ply.py  train_three_ext.py  train_three_ply.py  vecent_test.py  vecenv_eval.py  vecenv_test.py
app/pr_example/: anchor_test.py  collision_example.py  cube_move.py  distance.py  fall_create_test.py  rel_test.py  safe_exit.py  suction_test.py
app/socket_plug/: train_ext.py  train_ply.py
scene/plane_box/: base.ttt  base_vec6.ttt.bak  corner.ttt  corner_vec4.ttt  corner_vec4_test2.ttt  paralle.ttt  paralle_vec4.ttt  paralle_vec4_test2.ttt  three.ttt  three_vec4.ttt  three_vec4_test2.ttt
scene/pr_example/: collision_example.ttt  fall_create_test.ttt  suction_test.ttt  two_cube.ttt
scene/robot/: robot_eye_in_hand.ttt  robot_ros.ttt  robot_ros_old.ttt  robot_test.ttt
scene/socket_plug/: socket_plug.ttt  socket_plug_vec4.ttt  socket_plug_vec4_tol5.ttt
src/: analysis_log.py  analysis_log_config.yaml  utility.py
src/conio/: kbhit.py  key_listen.py
src/gym_env/: aabb.py  aug.py  utility.py
src/hppo/: hppo.py  hybrid_on_policy_algorithm.py  hybrid_policy.py  hybrid_rollout.py  rl_cnn.py  same_cnn.py  utility.py
src/net/: efficient_net.py  ln_efficient_net.py  multi_view_net.py  net_abc.py  pr_task_dataset.py  rl_cnn.py  utility.py
src/pr/: object_controller.py  pr_env_maker.py  (+3 more)
(+121 files in other folders)
