[project]
name = "ws"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "albumentations>=2.0.4",
    "matplotlib>=3.10.0",
    "moviepy==1.0.3",
    "numpy",
    "omegaconf>=2.3.0",
    "opencv-python-headless>=4.11.0.86",
    "optuna>=4.2.1",
    "pyrep",
    "scipy>=1.15.2",
    "stable-baselines3[extra]>=2.5.0",
    "tensorboard>=2.19.0",
]

[tool.uv.sources]
pyrep = { git = "https://github.com/stepjam/PyRep" }
